--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # SonarQube server details
 
 # Project identification
-sonar.projectKey=jassnanarh
+sonar.projectKey=jassnanarh_amex-api
 sonar.projectName=amex-api
 sonar.projectVersion=1.0
 sonar.oraganization=jassnanarh
